Addressed warnings in MongoLogger class